--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webextension-polyfill": "^0.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
