--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
