--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
+    "socket.io": "^4.7.0",
+    "socket.io-client": "^4.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
