--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-use-websocket": "3.0.0",
+    "react-webcam": "^7.1.1",
     "sass": "^1.62.1"
   },
   "scripts": {
