--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-use-websocket": "3.0.0",
     "react-webcam": "^7.1.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.62.1"
   },
   "scripts": {
