--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-use-websocket": "3.0.0",
     "react-webcam": "^7.1.1",
     "redux-persist": "^6.0.0",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
