--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^2.1.1",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-player": "^2.12.0",
