--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-webcam": "^7.1.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
+    "simple-peer": "^9.11.1",
     "uuid": "^9.0.0"
   },
   "scripts": {
