--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
+    "react-pdf": "^7.3.3",
     "react-player": "^2.12.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.7",
