--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
     "simple-peer": "^9.11.1",
+    "swiper": "^10.3.0",
     "uuid": "^9.0.0"
   },
   "scripts": {
