--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "sass": "^1.62.1",
     "simple-peer": "^9.11.1",
     "swiper": "^10.3.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
