--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +12,7 @@
     "antd": "^5.6.1",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "emoji-mart": "^5.5.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.1.1",
