--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "antd": "^5.6.1",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "draft-js": "^0.11.7",
     "emoji-mart": "^5.5.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.1.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-loader-spinner": "^5.3.4",
     "react-pdf": "^7.3.3",
     "react-player": "^2.12.0",
