--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "emoji-mart": "^5.5.2",
+    "html-to-draftjs": "^1.5.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.1.1",
